SGD8-2836: Fix title & date spacing (#591)
* SGD8-2836: Fix title & date spacing

* SGD8-2836: Fix date styling for all teasers

--- a/components/31-molecules/teaser/_teaser.scss
+++ b/components/31-molecules/teaser/_teaser.scss
@@ -27,9 +27,14 @@
     span {
       @include icon('calendar');
 
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      line-height: 1;
+
       &::before {
         position: relative;
-        top: 6px;
+        margin-right: 5px;
         font-size: 1.2rem;
       }
     }
@@ -206,8 +211,11 @@
     }
 
     .content__second {
+      display: flex;
       position: absolute;
       bottom: 0;
+      flex-direction: column;
+      align-items: flex-start;
       order: 1;
       width: 100%;
       height: auto;
@@ -218,16 +226,18 @@
 
         span {
           @include theme('background-color', 'color-none', 'heading-with-light-bg-background-color');
+
+          display: block;
         }
       }
 
       .date {
-        display: inline-block;
-        margin: -6px 0 0;
+        margin: 0;
         z-index: 1;
 
         span {
           @include theme('background-color', 'color-none', 'heading-with-light-bg-background-color');
+
           padding: 5px 10px;
           line-height: 1.2;
           box-decoration-break: clone;
